made sidebar content fixed also moved add job icon on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,11 @@ Sidebar
   background: var(--black);
 }
 
+.sidebar-list {
+  position: fixed;
+  width: 75px;
+}
+
 .sidebar-item {
   display: flex;
   align-items: center;
@@ -564,8 +569,8 @@ Current Owner
 
 .add-job-btn {
   position: fixed;
-  bottom: 1rem;
-  right: 1rem;
+  bottom: 0.8rem;
+  left: 0.8rem;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -584,6 +589,9 @@ Current Owner
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
+  }
+  .add-job-btn {
+    left: 93%;
   }
 }
 
